deployment/microservices/005-workload-blue.yaml

######## ws001-api #########
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws001-api-blue
  # labels - istio 注入需要
  labels:
    app: ws001-api
    version: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ws001-api
      version: blue
  strategy:
    rollingUpdate:
      # maxSurge:  e.g. maxSurge: 1、replicas: 5，代表 Kubernetes 會先開好 1 個新 pod 後才刪掉一個舊的 pod，整個升級過程中最多會有 5+1 個 pod
      maxSurge: 1
      # maxUnavailable: e.g. maxUnavailable: 1，代表 Kubernetes 整個升級過程中最多會有 1 個 pod 處在無法服務的狀態
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        auth-injection: enabled
        app: ws001-api
        version: blue
    spec:
      containers:
        - name: ws001-api
          image: yw4code/ws001-api:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 7001
              protocol: TCP


######## ws002-pingpong #########
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws002-pingpong-blue
  labels:
    app: ws002-pingpong
    version: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ws002-pingpong
      version: blue
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ws002-pingpong
        version: blue
    spec:
      containers:
        - name: ws002-pingpong
          image: yw4code/ws002-pingpong:latest
          imagePullPolicy: Always
          ports:
            - name: grpc
              containerPort: 7002
              protocol: TCP
---
######## ws003-auth #########
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws003-auth-blue
  # labels - istio 注入需要
  labels:
    app: ws003-auth
    version: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ws003-auth
      version: blue
  strategy:
    rollingUpdate:
      # maxSurge:  e.g. maxSurge: 1、replicas: 5，代表 Kubernetes 會先開好 1 個新 pod 後才刪掉一個舊的 pod，整個升級過程中最多會有 5+1 個 pod
      maxSurge: 1
      # maxUnavailable: e.g. maxUnavailable: 1，代表 Kubernetes 整個升級過程中最多會有 1 個 pod 處在無法服務的狀態
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ws003-auth
        version: blue
    spec:
      containers:
        - name: ws003-auth
          image: yw4code/ws003-auth:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 7003
              protocol: TCP
