deployment/microservices/006-workload-green.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws002-pingpong-green
  labels:
    app: ws002-pingpong
    version: green
spec:
  replicas: 0
  selector:
    matchLabels:
      app: ws002-pingpong
      version: green
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ws002-pingpong
        version: green
    spec:
      containers:
        - name: ws002-pingpong
          image: yw4code/ws002-pingpong:latest
          imagePullPolicy: Always
          ports:
            - name: grpc
              containerPort: 7002
              protocol: TCP
