deployment/microservices/003-service.yaml
# ports.name 是 istio 必要

apiVersion: v1
kind: Service
metadata:
  name: ws001-api
spec:
  type: NodePort
  selector:
    app: ws001-api
  ports:
    - name: http
      protocol: TCP
      port: 7001
      targetPort: 7001
---
apiVersion: v1
kind: Service
metadata:
  name: ws002-pingpong
spec:
  type: NodePort
  selector:
    app: ws002-pingpong
  ports:
    - name: grpc
      protocol: TCP
      port: 7002
      targetPort: 7002
---
apiVersion: v1
kind: Service
metadata:
  name: ws003-auth
spec:
  type: NodePort
  selector:
    app: ws003-auth
  ports:
    - name: http
      protocol: TCP
      port: 7003
      targetPort: 7003
