deployment/microservices/010-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: api-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "ares.workshop.com" # <--- 改成你的專屬 Domain e.g. ares.workshop.com
        - "sit.ares.workshop.com"
        - "prod.ares.workshop.com"
