deployment/microservices/015-destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ws001-api
spec:
  host: ws001-api
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
    - name: blue
      labels:
        version: blue
    - name: green
      labels:
        version: green
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ws002-pingpong
spec:
  host: ws002-pingpong
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    connectionPool:
      # http 適用 HTTP1.1/HTTP2/GRPC
      http:
#        http2MaxRequests: 5
        # 併發測試成功 10 Requests/ 3 Success / 3 Retry Success / Total 6 Success (Same as access log)
        maxRequestsPerConnection: 5
    outlierDetection:
      consecutiveErrors: 1
      interval: 1s
      baseEjectionTime: 3s
      maxEjectionPercent: 100
  subsets:
    - name: blue
      labels:
        version: blue
    - name: green
      labels:
        version: green
