deployment/microservices/020-path-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api
spec:
  hosts:
    - "*"
  gateways:
    - api-gateway
  http:
    - match:
        - uri:
            regex: .*\/(private|public)\/api\/.*
      route:
        - destination:
            host: ws001-api
            port:
              number: 7001
