deployment/microservices/020-virtual-service.yaml
# 路由規則
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api
spec:
  hosts:
    - "*"
  gateways:
    - api-gateway
  http:
    - match:
        - uri:
            regex: .*\/(private|public)\/api\/.*
      route:
        - destination:
            host: ws001-api
            port:
              number: 7001
      corsPolicy:
        allowOrigin:
          - "*"
        allowMethods:
          - POST
          - GET
          - OPTIONS
          - PUT
          - DELETE
        allowCredentials: true
        allowHeaders:
          - "*"
---
# ws002-pingpong
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ws002-pingpong
spec:
  hosts:
    - ws002-pingpong
  http:
    - route:
        # 金絲雀部署: 調整流量請 kubectl edit , 勿更新此檔
        - destination:
            host: ws002-pingpong
            subset: blue
          weight: 100
        - destination:
            host: ws002-pingpong
            subset: green
          weight: 0
